<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/deepGreen"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/paneBottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="15dp"
        android:gravity="center_vertical"
        android:padding="10dp" >

        <Button
            android:id="@+id/forgotPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:padding="10dp"
            android:text="@string/forgotPassword"
            android:textColor="@color/lightSkyBlue" />

        <LinearLayout
            android:id="@+id/separator"
            android:layout_width="2dp"
            android:layout_height="20dp"
            android:background="@color/lightSkyBlue"
            android:orientation="horizontal" />


        <Button
            android:id="@+id/signUpButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/forgotPassword"
            android:background="@android:color/transparent"
            android:textColor="@color/lightSkyBlue"
            android:padding="10dp"
            android:text="@string/signUp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/centerPane"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/username"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_centerHorizontal="true"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textColor="@color/deepGreen" 
             >

            <requestFocus />
        </EditText>

        <EditText
            android:id="@+id/password"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_below="@+id/username"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="14dp"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColor="@color/deepGreen" 
            />

        <LinearLayout
            android:id="@+id/pane2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/password"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="14dp" >

            <CheckBox
                android:id="@+id/keepLoggedIn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="10dp"
                android:checked="true"
                android:text="@string/keepLoggedIn"
                android:textColor="@color/cream" />

            <Button
                android:id="@+id/loginButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/button_click"
                android:padding="10dp"
                android:text="@string/login" 
                />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>